--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-@using WebApplication1
-@namespace WebApplication1.Pages
+@namespace MyPlayground.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
