--- a/ClientApp/src/app/forecast/forecast.component.scss
+++ b/ClientApp/src/app/forecast/forecast.component.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,300,100');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css');
 
-::ng-deep body {
+body {
     background-color: #3F51B5;
 }
 
@@ -46,15 +46,15 @@ a:hover,
     // -moz-placeholder {color: white; opacity: 0.35;}
 }
 
-::ng-deep mat-form-field,::ng-deep mat-placeholder {
+ mat-form-field, mat-placeholder {
     color: white;
 }
-::ng-deep .mat-form-field-underline, ::ng-deep .mat-form-field-ripple {
+ .mat-form-field-underline,  .mat-form-field-ripple {
     background-color: white !important;
     color: white !important;
   }
   
-  ::ng-deep .mat-form-field-empty.mat-form-field-label{
+   .mat-form-field-empty.mat-form-field-label{
     color: white;
 }
 
